<resources>
    <string name="appName">testing</string>
    <string name="password">Wpisz hasło</string>
    <string name="acceptButton">Zaloguj</string>
    <string name="errorPassword">Niepoprawne hasło</string>
    <string name="createAccount">Stwórz Konto</string>
    <string name="nameOrNick">Podaj Imię/Nick</string>
    <string name="repeatPassword">Powtórz hasło</string>
    <string name="redCross">redCross</string>
    <string name="greenMark">greenMark</string>
    <string name="create">Stwórz</string>
    <string name="userName">Nazwa użytkownika</string>
    <string name="yourSchedule">Twój Dzisiejszy Harmonogram</string>
    <string name="time_coll">Godzina</string>
    <string name="name_coll">Nazwa</string>
    <string name="priority_coll">Priorytet</string>
    <string name="notification_coll">Powiadomienie</string>
    <string name="additional_info_coll">Dodatkowe INFO</string>
    <string name="activityName">Nazwa Aktywności</string>
    <string name="hour00_00">00:00</string>
    <string name="hour00_30">00:30</string>
    <string name="hour01_00">01:00</string>
    <string name="hour01_30">01:30</string>
    <string name="hour02_00">02:00</string>
    <string name="hour02_30">02:30</string>
    <string name="hour03_00">03:00</string>
    <string name="hour03_30">03:30</string>
    <string name="hour04_00">04:00</string>
    <string name="hour04_30">04:30</string>
    <string name="hour05_00">05:00</string>
    <string name="hour05_30">05:30</string>
    <string name="hour06_00">06:00</string>
    <string name="hour06_30">06:30</string>
    <string name="hour07_00">07:00</string>
    <string name="hour07_30">07:30</string>
    <string name="hour08_00">08:00</string>
    <string name="hour08_30">08:30</string>
    <string name="hour09_00">09:00</string>
    <string name="hour09_30">09:30</string>
    <string name="hour10_00">10:00</string>
    <string name="hour10_30">10:30</string>
    <string name="hour11_00">11:00</string>
    <string name="hour11_30">11:30</string>
    <string name="hour12_00">12:00</string>
    <string name="hour12_30">12:30</string>
    <string name="hour13_00">13:00</string>
    <string name="hour13_30">13:30</string>
    <string name="hour14_00">14:00</string>
    <string name="hour14_30">14:30</string>
    <string name="hour15_00">15:00</string>
    <string name="hour15_30">15:30</string>
    <string name="hour16_00">16:00</string>
    <string name="hour16_30">16:30</string>
    <string name="hour17_00">17:00</string>
    <string name="hour17_30">17:30</string>
    <string name="hour18_00">18:00</string>
    <string name="hour18_30">18:30</string>
    <string name="hour19_00">19:00</string>
    <string name="hour19_30">19:30</string>
    <string name="hour20_00">20:00</string>
    <string name="hour20_30">20:30</string>
    <string name="hour21_00">21:00</string>
    <string name="hour21_30">21:30</string>
    <string name="hour22_00">22:00</string>
    <string name="hour22_30">22:30</string>
    <string name="hour23_00">23:00</string>
    <string name="hour23_30">23:30</string>
    <string name="plusIcon">Icon of adding new activity to schedule</string>
    <string name="addbutton">DODAJ</string>
    <string name="addActivity_createactivytySign">Stwórz Nową Aktywność</string>
    <string name="must_have">MUSI</string>
    <string name="should_have">POWINNO</string>
    <string name="start_hour">Godzina Startu</string>
    <string name="finish_hour">Godzina Końca</string>
    <string name="mog_o">MOGŁO</string>


</resources>