<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_add">


    <Button
        android:id="@+id/button2"
        android:layout_width="141dp"
        android:layout_height="62dp"
        android:layout_marginStart="124dp"
        android:layout_marginBottom="16dp"
        android:text="@string/addbutton"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="277dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="60dp"
        android:text="@string/addActivity_createactivytySign"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ActivityName"
        android:layout_width="263dp"
        android:layout_height="52dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:text=""
        android:ems="10"
        android:hint="@string/activityName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="232dp"
        android:layout_height="50dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="36dp"
        android:text="@string/notification_coll"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/bonusInfo"
        android:layout_width="221dp"
        android:layout_height="52dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/additional_info_coll"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ActivityName" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="252dp"
        android:layout_height="146dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/must_have" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/should_have" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/mog_o"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="116dp"
        android:layout_height="24dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="12dp"
        android:text="@string/priority_coll"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startHourButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/start_hour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ActivityName" />

    <Button
        android:id="@+id/finishHourButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/finish_hour"
        app:layout_constraintStart_toEndOf="@+id/startHourButton"
        app:layout_constraintTop_toBottomOf="@+id/ActivityName" />


</androidx.constraintlayout.widget.ConstraintLayout>