<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/errorPassword"
        android:layout_width="227dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/errorPassword"
        android:textColor="#A6FF0000"
        android:textSize="25sp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="132dp"
        android:layout_height="60dp"
        android:backgroundTint="#C62500EF"
        android:onClick="sendMessage"
        android:text="@string/acceptButton"
        tools:layout_editor_absoluteX="258dp"
        tools:layout_editor_absoluteY="151dp" />

    <EditText
        android:id="@+id/passwordViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="224dp"
        android:autofillHints="@string/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createAccountButtonId"
        android:layout_width="132dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="444dp"
        android:background="#5926AC"
        android:onClick="createdAccountAction"
        android:text="@string/createAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toEndOf="@+id/errorPassword"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/userNameViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="166dp" />

</androidx.constraintlayout.widget.ConstraintLayout>