<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DayScheduleActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="412dp"
        android:layout_height="90dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/yourSchedule"
        android:textStyle="italic"

        android:textColor="@color/black"
        android:textSize="38sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"

        android:background="@color/paper">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="0dp"
            android:gravity="center"
            >


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/orange">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/time_coll"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/name_coll"
                    android:textStyle="bold"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/type_coll"
                    android:textStyle="bold"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="3sp"
                    android:text="@string/notification_coll"
                    android:textColor="#3E2723"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="0sp"
                    android:text="@string/additional_info_coll"
                    android:textColor="#3E2723"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/hour00_00"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/name_coll"
                    android:textStyle="bold"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/type_coll"
                    android:textStyle="bold"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="3sp"
                    android:text="@string/notification_coll"
                    android:textColor="#3E2723"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="0sp"
                    android:text="@string/additional_info_coll"
                    android:textColor="#3E2723"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </TableRow>




            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/hour00_30"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/name_coll"
                    android:textStyle="bold"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/type_coll"
                    android:textStyle="bold"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="3sp"
                    android:text="@string/notification_coll"
                    android:textColor="#3E2723"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="0sp"
                    android:text="@string/additional_info_coll"
                    android:textColor="#3E2723"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/hour01_00"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/name_coll"
                    android:textStyle="bold"
                    android:textSize="14sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="10sp"
                    android:text="@string/type_coll"
                    android:textStyle="bold"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="3sp"
                    android:text="@string/notification_coll"
                    android:textColor="#3E2723"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"
                    android:padding="0sp"
                    android:text="@string/additional_info_coll"
                    android:textColor="#3E2723"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </TableRow>
        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

